Settings button and settings div

--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
     <title>Exercicio 1</title>
     <!-- texto na decoração da janela -->
     <link rel="stylesheet" href="style.css" type="text/css" />
+    <script src="toggleFun.js"></script> <!-- Chama a função js -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body bgcolor="#1B2021">
     <h1 class="title">Mancala</h1>
-
-
+    <button id="settingsButton" onclick="toggleFun()">Game settings<i class="fa fa-gear"></i></button>
+    <div id="settings">
+      test
+    </div>
     <footer>
       <h1>This is a footer</h1>
       <p>
