--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body bgcolor="#1B2021">
-    <h1 class="title">Mancala</h1>
+    <h1 class="title" id="pageTitle">Mancala</h1>
     <button id="settingsButton" onclick="toggleFun()">Game settings<i class="fa fa-gear"></i></button>
     <div id="settings">
-      test
+      <h1 class="title" id="settingsTitle">Settings</h1>
     </div>
     <footer>
       <h1>This is a footer</h1>
