Added go_to_pos and move_pieces

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- texto na decoração da janela -->
     <link rel="stylesheet" href="style.css" type="text/css" />
     <script src="circularLinkedList.js"></script> <!-- Chama a função js -->
-    <script src="cll_testing.js"></script> <!-- Chama a função js -->
+    <script src="game.js"></script> <!-- Chama a função js -->
     <script src="toggleFun.js"></script> <!-- Chama a função js -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
