adicionei o css pra tirar o hover dos buracos

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!-- Pagina do jogo -->
       <div class="item border" id="gameArea">
         <div id="playerTurnDisplay">
-          <div>Player: 1</div>
+          <!-- <div>Player: 1</div> -->
         </div>
         <!-- Tabuleiro -->
         <div class="board-container border" id="board">
