--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
                 </div>
               </div>
               
-              <!-- Slider para o nivel de intelegencia artificial -->
+              <!-- Slider para o nivel de inteligencia artificial -->
               <div class="sliderContainer">
                 <div class="centerFlexText">Nível da AI</div>
                 <div class="slider">
-                  <input type="range" id="volume" name="volume" min="0" max="3" value="2">
-                  <label id="demo"for="volume">2</label>
+                  <input type="range" id="slider_ai" name="volume" min="1" max="3" value="1">
+                  <label id="output_ai"for="slider_ai">2</label>
                 </div>
               </div>
 
