--- a/index.html
+++ b/index.html
@@ -25,9 +25,38 @@
   <body bgcolor="#1B2021">
     <h1 class="title" id="pageTitle">Mancala</h1>
 
+    <div class="hiddenBox border" id="rules">
+      <div id="rules_text">
+        <h3>Basic Rules:</h3>
+        <ul>
+          <li>Play always moves around the board in a counter-clockwise circle (to the right)</li>
+          <li>The store on your right belongs to you. That is where you keep the seeds you win.</li>
+          <li>The store on your right belongs to you. That is where you keep the seeds you win.</li>
+          <li>The six pits near you are your pits.</li>
+          <li>Only use one hand to pick up and put down seeds.</li>
+          <li>Once you touch the seeds in a pit, you must move those seeds.</li>
+          <li>Only put seeds in your own store, not your opponent’s store.</li>
+        </ul>
+        <h3>Starting the Game:</h3>
+        On a turn, a player picks up all the seeds in one pit and “sows” them to the right, placing one
+        seed in each of the pits along the way. If you come to your store, then add a seed to your store
+        and continue. You may end up putting seeds in your opponent’s pits along the way.
+        Play alternates back and forth, with opponents picking up the seeds in one of their pits and
+        distributing them one at a time into the pits on the right, beginning in the pit immediately to the
+        right.
+        <h3>Special Rules:</h3>
+        *When the last seed in your hand lands in your store, take another turn.
+        *When the last seed in your hand lands in one of your own pits, if that pit had been empty you
+        get to keep all of the seeds in your opponents pit on the opposite side. Put those captured seeds,
+        as well as the last seed that you just played on your side, into the store.
+        <h3>Ending the Game:</h3>
+        The game is over when one player’s pits are completely empty. The other player takes the seeds
+        remaining in her pits and puts those seeds in her store. Count up the seeds. Whoever has the most
+        seeds wins. </div>
+    </div>
+
     <!-- Container principal -->
     <div class="container-row">
-      
       <!-- Pagina do jogo -->
       <div class="item border" id="gameArea">
         <div id="playerTurnDisplay">
@@ -127,7 +156,7 @@
               <button class="settingsButtons border" onclick="board()">Pontuação</button>
             </div>
 
-            <!-- Caixa da pontuacao -->
+            <!-- Caixa das regras -->
             <div class="item">
               <button class="settingsButtons border" onclick="toggleRules()">Regras</button>
             </div>
@@ -139,12 +168,10 @@
     </div>
 
 
-    <div class="hiddenBox border" id="rules">
-      Pontuação
-    </div>
+   
 
     <div class="hiddenBox border" id="score">
-      regras
+      Score
     </div>
 
     
