--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>Exercicio 1</title>
     <link rel="shortcut icon" href="#">
     <!-- texto na decoração da janela -->
-    <link rel="stylesheet" href="./public/style.css" type="text/css" />
-    <script src="./public/circularLinkedList.js"></script> <!-- Chama a função js -->
-    <script src="./public/game.js"></script> <!-- Chama a função js -->
-    <script src="./public/toggleFun.js"></script> <!-- Chama a função js -->
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <script src="circularLinkedList.js"></script> <!-- Chama a função js -->
+    <script src="game.js"></script> <!-- Chama a função js -->
+    <script src="toggleFun.js"></script> <!-- Chama a função js -->
+    <script src="requests.js"></script> <!-- Função requests -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
