added login to nodejs

--- a/index.html
+++ b/index.html
@@ -8,18 +8,15 @@
     <title>Exercicio 1</title>
     <link rel="shortcut icon" href="#">
     <!-- texto na decoração da janela -->
-    <link rel="stylesheet" href="style.css" type="text/css" />
-    <script src="circularLinkedList.js"></script> <!-- Chama a função js -->
-    <script src="game.js"></script> <!-- Chama a função js -->
-    <script src="toggleFun.js"></script> <!-- Chama a função js -->
-    <script src="requests.js"></script> <!-- Função requests -->
+    <link rel="stylesheet" href="./css/style.css" type="text/css" />
+    <script src="./js/circularLinkedList.js"></script> <!-- Chama a função js -->
+    <script src="./js/game.js"></script> <!-- Chama a função js -->
+    <script src="./js/toggleFun.js"></script> <!-- Chama a função js -->
+    <script src="./js/requests.js"></script> <!-- Função requests -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
