--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <li>The six pits near you are your pits.</li>
           <li>Only use one hand to pick up and put down seeds.</li>
           <li>Once you touch the seeds in a pit, you must move those seeds.</li>
-          <li>Only put seeds in your own store, not your opponent’s store.</li>
+          <li>Only put seeds in your own store, not your opponent´s store.</li>
         </ul>
         <h3>Starting the Game:</h3>
         On a turn, a player picks up all the seeds in one pit and “sows” them to the right, placing one
