--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h1 class="title" id="pageTitle">Mancala</h1>
 
     <div class="hiddenBox border" id="register_div">
-      <center>
+      <center style="padding:1em">
         <h3>Register</h3>
         <form id="auth-Form">
           <label for="nickname">Nickname:</label>
@@ -39,14 +39,14 @@
     </div>
 
     <div class="hiddenBox border" id="score">
-      <center>
+      <center style="padding:1em">
         <h3>Score</h3>
       </center>
-      <div id="score_text"></div>
+      <div style="padding:1em" id="score_text"></div>
     </div>
 
     <div class="hiddenBox border" id="rules">
-      <div id="rules_text">
+      <div style="padding:1em" id="rules_text">
         <h3>Basic Rules:</h3>
         <ul>
           <li>Play always moves around the board in a counter-clockwise circle (to the right)</li>
